# clipray

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: post-merge-version-bump.yml  release.yml  test.yml
clipray/: 設計書.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  config.rs  constants.rs  database.rs  lib.rs  main.rs  types.rs  window.rs
src-tauri/src/libs/: clipboard.rs  commands.rs  config.rs  constants.rs  database.rs  mod.rs  types.rs  window.rs
src-tauri/src/libs/test/: complex_tests.rs  database_tests.rs  mod.rs  types_tests.rs
src-tauri/tests/: TEST_CASES.md
src/components/: ClipboardItem.tsx  ClipboardList.tsx  EmptyState.tsx  ExitConfirmModal.tsx  Footer.tsx  Header.tsx  Settings.tsx
src/hooks/: useClipboard.ts  useKeyboardNavigation.ts  useTheme.ts
src/styles/: themes.css
src/types/: app-config.interface.ts  clipboard-item.interface.ts  index.ts  theme.ts
src/utils/: theme.ts
tools/: bunp-up-version.sh
